# habit_server

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  deps.txt
source/HabitServer/: CMakeLists.txt  HabitRequestHandler.cpp  HabitRequestHandler.hpp  HabitServer.cpp  HabitServer.hpp
source/HabitServer/data/: HabitDatabase.hpp
source/HabitServer/data/model/: HabitMapping.hpp  User.cpp  User.hpp
source/HabitServer/data/network/: Network.hpp
source/HabitServer/requests/: HabitBaseRequest.hpp  HelloRequest.cpp  HelloRequest.hpp
source/HabitServer/requests/authorization/: LoginRequest.cpp  LoginRequest.hpp  RegistrationRequest.cpp  RegistrationRequest.hpp
source/HabitServer_test/: CMakeLists.txt  main.cpp
src/: credientals.rs  habit.rs  main.rs  user.rs
