[package]
name = "habit_server"
version = "0.1.0"
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
#rocket_contrib = "0.4.7"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool", "json"]


[global.databases]
sqlite_logs = { url = "/home/vladas/dev/database.sqlite" }
